# whisper-bot

./: .dockerignore  .gitignore  Makefile  README.md  bugs.md  install.sh  pyproject.toml
docker/: bot.Dockerfile  dev.docker-compose.cpu.yml  dev.docker-compose.yml  docker-compose.override.yml  worker.Dockerfile
docs/: architecture-plan.md  todo.md
src/bot/: lifecycle.py  main.py  settings.py  states.py  webhook.py
src/bot/audio/: sample_transcription.txt
src/bot/clients/cache/: redis_client.py
src/bot/clients/database/: clickhouse_client.py
src/bot/core/: loader.py
src/bot/enums/: __init__.py  file_formats.py
src/bot/handlers/: __init__.py  info.py  transcribe.py
src/bot/keyboards/: default_commands.py
src/bot/middlewares/: __init__.py
src/bot/schemas/: __init__.py  summary.py
src/bot/utils/: diarize.py  download.py  google_drive.py  summary_generator.py  test.py  transcribe.py
src/scripts/: generate_summary_local.py  transcribe_diarize_local.py  transcribe_local.py
src/transcribe_worker/: diarize.py  main.py  settings.py  transcribe.py
